remove use of "...".formatted(...) in API (not available until Java 13, API only has 11)